--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -27,7 +27,7 @@ Cloud Run is [powered and built on Knative](https://cloud.google.com/knative). K
 - Cloud Run is configured to [send multiple concurrent requests on each container instance. ](https://cloud.google.com/run/docs/configuring/concurrency)This is helpful to improve latency and reduce costs if you’re expecting large volumes.
 - Cloud Run lets you [create microservice-based applications that are scalable and extensible](https://cloud.google.com/blog/products/serverless/build-event-driven-applications-in-cloud-run).
 
-In this tutorial, you will learn how to deploy a simple Redis Rating limiting application to Google Cloud Run in just 5 minutes.
+In this tutorial, you will learn how to deploy a simple Redis rate limiting application to Google Cloud Run in just 5 minutes.
 
 ### Table of Contents
 
