--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -55,7 +55,7 @@ Visit [developer.redis.com/create/rediscloud/](https://developer.redis.com/creat
 
 ### Step 2. Install Google Cloud CLI
 
-Run the below command to install Google Cloud CLI Core Libraries and dependencies
+Run the following command to install Google Cloud CLI Core Libraries and dependencies:
 
 
 ```
