--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -66,7 +66,7 @@ brew install --cask google-cloud-sdk
 
 ### Step 3. Authenticate your GCP account
 
-To deploy your app with the gcloud CLI, you must download, install, and initialize the [gcloud CLI](https://cloud.google.com/sdk/docs). 
+To deploy your app you must first download, install, and initialize the [gcloud CLI](https://cloud.google.com/sdk/docs). 
 
 Download and install gcloud SDK via [https://cloud.google.com/sdk/docs](https://cloud.google.com/sdk/docs)
 
