--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -82,7 +82,7 @@ Allow Google Cloud SDK access to your Google Account:
 
 
 
-![alt_text](images/authenticate_gcloud.png "image_tooltip")
+![Authenticating with Google Cloud](images/authenticate_gcloud.png "image_tooltip")
 
 
 ### Step 4. Enable Google Services
