--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -189,7 +189,7 @@ Service URL: https://django-redis-rate-limiting-example-opcboau66a-de.a.run.app
 
 
 
-![alt_text](images/gcloud1.png "image_tooltip")
+![Verifying if the service is listed](images/gcloud1.png "image_tooltip")
 
 
 
