--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -193,7 +193,7 @@ Service URL: https://django-redis-rate-limiting-example-opcboau66a-de.a.run.app
 
 
 
-![alt_text](images/gcloud2.png "image_tooltip")
+![Verifying if the service is listed](images/gcloud2.png "image_tooltip")
 
 
 #### Verifying the service via terminal UI
