--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -232,7 +232,7 @@ Last updated on 2022-02-19T02:50:03.100357Z by ajeet.raina@redis.com:
 
 
 
-![alt_text](images/gcloud3.png "image_tooltip")
+![Setting up environment variables](images/gcloud3.png "image_tooltip")
 
 
 
