--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -242,7 +242,7 @@ Last updated on 2022-02-19T02:50:03.100357Z by ajeet.raina@redis.com:
 
 
 
-![alt_text](images/gcloud4.png "image_tooltip")
+![Enabling HTTPS](images/gcloud4.png "image_tooltip")
 
 
 
