--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -263,6 +263,10 @@ Last updated on 2022-02-19T02:50:03.100357Z by ajeet.raina@redis.com:
 
 ### Step 8. Access your app
 
+
+Wait for the build and deploy to complete. When finished, a message with unique URL will be displayed.
+Please note that the URL shown in your case will be different from the one shown below:
+
 Open [https://django-redis-rate-limiting-example-opcboau66a-de.a.run.app/](https://django-redis-rate-limiting-example-opcboau66a-de.a.run.app/) and access your app.
 
 
