--- a/docs/create/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
+++ b/docs/create/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
@@ -52,11 +52,18 @@ In this tutorial, you will see how to deploy a simple Redis caching app built wi
 
 Visit [https://developer.redis.com/create/rediscloud/](https://developer.redis.com/create/rediscloud/) and create a free Redis Enterprise Cloud account. Enable the “RediSearch” module while you create the Redis Enterprise Cloud database. Once you complete the tutorial, you will be provided with the database Endpoint URL and password. Save it for future reference.
 
+:::note TIP
+For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities! 
 
-![MyImage](recloud_1.png)
+:tada: [Click here to sign up](https://redis.com/try-free)
+
+:::
 
 
-### Step 2. Install Netlify CLI#
+![MyImage](recloud_search.png)
+
+
+### Step 2. Install Netlify CLI
 
 Netlify’s command line interface (CLI) lets you configure continuous deployment directly from the command line. Run the below command to install Netlify CLI on your local laptop:
 
