--- a/docs/create/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
+++ b/docs/create/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
@@ -23,7 +23,7 @@ Netlify helps developers to launch websites and campaigns in minutes with no fus
 
 ### How Netlify works?
 
-![MyImages](netlifyimage.png)
+![netlify](netlifyimage.png)
 
 1. The developer writes code and stores it in a version control repository (e.g. GitHub).
 2. When a new change is merged into the main branch of the repository, a webhook notifies Netlify to deploy a new site.
@@ -60,7 +60,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 :::
 
 
-![MyImage](recloud_search.png)
+![rediscloud](recloud_search.png)
 
 
 ### Step 2. Install Netlify CLI
