--- a/docs/create/vercel/index-vercel.mdx
+++ b/docs/create/vercel/index-vercel.mdx
@@ -14,7 +14,7 @@ Vercel is the preferred platform to host [Next.js-based web applications](https:
 Vercel integrates well with popular tools, such as [GitHub](https://vercel.com/docs/concepts/git/vercel-for-github), [GitLab](https://vercel.com/docs/concepts/git/vercel-for-gitlab), [Lighthouse](https://vercel.com/integrations/lighthouse), [Doppler](https://vercel.com/integrations/doppler), and [Divjoy](https://divjoy.com/). NodeJS, Go, Python, and Ruby are the leading [official runtimes supported by Vercel](https://vercel.com/docs/runtimes).
 
 
-![alt_text](images/vercel_redis.png "image_tooltip")
+![vercel](images/vercel_redis.png "image_tooltip")
 
 
 ### Features of Vercel
