--- a/docs/create/vercel/index-vercel.mdx
+++ b/docs/create/vercel/index-vercel.mdx
@@ -48,11 +48,16 @@ In this tutorial, you will learn how to deploy a Node.js based Redis chat applic
 
 Visit [developer.redis.com/create/rediscloud/](https://developer.redis.com/create/rediscloud/) and create [a free Redis Enterprise Cloud account](https://redis.com/try-free/). Once you complete this tutorial, you will be provided with the database endpoint URL and password. Save it for future reference.
 
+:::tip TIP
+For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
+
+:tada: [Click here to sign up](https://redis.com/try-free)
+
+:::
 
 
 
-
-![alt_text](images/vercel2.png "image_tooltip")
+![alt_text](images/rediscloud_endpoint.png "image_tooltip")
 
 
 ### Step 2. Install Vercel CLI 
@@ -129,7 +134,7 @@ Let us first set up environment variables.
  vercel env add
 Vercel CLI 23.1.2
 ? What's the name of the variable? REDIS_ENDPOINT_URI
-? What's the value of REDIS_ENDPOINT_URI? redis-XXXX.c212.ap-south-1-1.ec2.cloud.redislabs.com:XXX
+? What's the value of REDIS_ENDPOINT_URI? redis-XXXX.c264.ap-south-1-1.ec2.cloud.redislabs.com:XXX
 
 ```
 
