--- a/docs/create/rediscloud/index-recloud.mdx
+++ b/docs/create/rediscloud/index-recloud.mdx
@@ -12,7 +12,15 @@ Redis Enterprise Cloud is a fully managed cloud service by Redis. Built for mode
 
 Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
-![My Image](images/try-free.png)
+:::tip TIP
+For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
+
+:tada: [Click here to sign up](https://redis.com/try-free)
+
+:::
+
+
+![My Image](images/tryfree.png)
 
 
 
