Changed environmental variables to environment variables.

--- a/docs/create/aws/bidding-on-aws/index-bidding-on-aws.mdx
+++ b/docs/create/aws/bidding-on-aws/index-bidding-on-aws.mdx
@@ -106,7 +106,7 @@ The 'npm install' is a npm cli-command that does the predefined thing i.e instal
 npm install
 ```
 
-### Step 4. Setting up environmental variable
+### Step 4. Setting up environment variables
 
 
 
