--- a/docs/create/heroku/herokunodejs/index-herokunodejs.mdx
+++ b/docs/create/heroku/herokunodejs/index-herokunodejs.mdx
@@ -73,9 +73,9 @@ https://rocky-lowlands-06306.herokuapp.com/ | https://git.heroku.com/rocky-lowla
 
 
 
-### Step 6. Setting up Environmental variable
+### Step 6. Setting up environment variables
 
-Go to the Heroku dashboard, click "Settings" and set REDIS_ENDPOINT_URI and REDIS_PASSWORD under the Config Vars.
+Go to the Heroku dashboard, click "Settings" and set `REDIS_ENDPOINT_URI` and `REDIS_PASSWORD` under the Config Vars.
 Refer to Step 1 for the correct values to use.
 
 ![heroku](heroku_app1_env.png)
