--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -102,10 +102,10 @@ Run the commands below to get a functioning Git repository that contains a simpl
 ![heroku](heroku_app01.png)
 
 
-#### Step 6. Setting up Environmental variable
+#### Step 6. Setting up environment variables
 
 [Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
-Go to the Heroku dashboard, click "Settings" and set REDIS_ENDPOINT_URI and REDIS_PASSWORD under the Config Vars.(Please note that the database endpoint is unique and might be different in your case. Please enter the values accordingly)
+Go to the Heroku dashboard, click "Settings" and set `REDIS_ENDPOINT_URI` and `REDIS_PASSWORD` under the Config Vars.(Please note that the database endpoint is unique and might be different in your case. Please enter the values accordingly)
 
 Refer to [Step 1](/create/heroku/portal#step-1-create-redis-enterprise-cloud) for the correct values to use.
 
