--- a/docs/howtos/analytics/index-analytics.mdx
+++ b/docs/howtos/analytics/index-analytics.mdx
@@ -33,9 +33,9 @@ This tutorial shows a basic analytics dashboard app that uses Redis Bitmap writt
 ### Step 3. Setting up backend
 
 
-First we will be settin up environmental variables
+First we will be setting up some environment variables.
 
-Go to /server folder (cd ./server) and then execute the below command:
+Go to /server folder (cd ./server) and then execute the following command:
 
   ```bash
    cp .env.example .env
