--- a/docs/howtos/hackernews/index-hackernews.mdx
+++ b/docs/howtos/hackernews/index-hackernews.mdx
@@ -41,7 +41,7 @@ Save the database endpoint URL and password for our future reference
    cd redis-hacker-news-demo
   ```
 
-### Step 4. Setting up environmental variable
+### Step 4. Setting up environment variables
 
 Copy .env.sample to .env and provide the values as shown below:
 
