--- a/docs/howtos/herokupython/index-herokupython.mdx
+++ b/docs/howtos/herokupython/index-herokupython.mdx
@@ -63,10 +63,10 @@ Creating app... done, ⬢ fast-reef-76278
 https://fast-reef-76278.herokuapp.com/ | https://git.heroku.com/fast-reef-76278.git
 ```
 
-### Step 6. Setting up Environmental variable
+### Step 6. Setting up environment variables
 
-Go to Heroku dashboard, click "Settings" and set REDIS_ENDPOINT_URI and REDIS_PASSWORD under the Config Vars.
-Refer to Step 1 for the reference.
+Go to Heroku dashboard, click "Settings" and set `REDIS_ENDPOINT_URI` and `REDIS_PASSWORD` under the Config Vars.
+Refer to Step 1 for reference.
 
 ![heroku](heroku_app1_env.png)
 
