--- a/docs/howtos/ratelimiting/index-ratelimiting.mdx
+++ b/docs/howtos/ratelimiting/index-ratelimiting.mdx
@@ -214,9 +214,9 @@ docker network create global
 docker-compose up -d --build
 ```
 
-### Step 4. Setting up an environmental variable 
+### Step 4. Setting up environment variables
 
-Open directory server (cd server): copy .env.example to create .env and provide the values for environment variables (if needed).
+Open directory server (`cd server``): copy `.env.example` to create `.env` and provide the values for environment variables (if needed).
 
 
 ```
