--- a/docs/howtos/redisgraph/redisgraphmovies/index-redisgraphmovies.mdx
+++ b/docs/howtos/redisgraph/redisgraphmovies/index-redisgraphmovies.mdx
@@ -60,9 +60,9 @@ Ensure that Docker container is up and runnig
   git clone https://github.com/redis-developer/basic-redisgraph-movie-demo-app-nodejs
  ```
 
-### Step 5. Setting up environmental variable
+### Step 5. Setting up environment variables
 
-Copy .env.sample to .env and add the below details: 
+Copy `.env.sample` to `.env` and add the following details: 
 
  ```bash
    REDIS_ENDPOINT_URL = "Redis server URI"
