--- a/docs/howtos/shoppingcart/index-shoppingcart.mdx
+++ b/docs/howtos/shoppingcart/index-shoppingcart.mdx
@@ -611,7 +611,7 @@ Our product model will be basic as possible as it holds the product name, price 
  
 #### Testing the Server
  
-Copy `.env.example` to `.env` file and fill environmental variables as shown below:
+Copy `.env.example` to `.env` file and set environment variables as shown below:
  
  
 ```
