--- a/docs/howtos/herokujava/index-herokujava.mdx
+++ b/docs/howtos/herokujava/index-herokujava.mdx
@@ -59,10 +59,10 @@ https://hidden-woodland-03996.herokuapp.com/ | https://git.heroku.com/hidden-woo
 ```
 
 
-### Step 6. Setting up Environmental variable
+### Step 6. Setting up environment variables
 
-Go to Heroku dashboard, click "Settings" and set REDIS_ENDPOINT_URI and REDIS_PASSWORD under the Config Vars.
-Refer to Step 1 for the reference.
+Go to Heroku dashboard, click "Settings" and set `REDIS_ENDPOINT_URI` and `REDIS_PASSWORD` under the Config Vars.
+Refer to Step 1 for reference.
 
 ![heroku](heroku_app1_env.png)
 
