--- a/docs/howtos/redisgraphmovies/index-redisgraphmovies.mdx
+++ b/docs/howtos/redisgraphmovies/index-redisgraphmovies.mdx
@@ -59,7 +59,7 @@ Ensure that Docker container is up and runnig
   git clone https://github.com/redis-developer/basic-redisgraph-movie-demo-app-nodejs
  ```
 
-### Step 5. Setting up environmental variable
+### Step 5. Setting up environment variables
 
 Copy .env.sample to .env and add the below details: 
 
