Updated many pages to use the newer author system.

--- a/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window-reactive.mdx
+++ b/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window-reactive.mdx
@@ -3,14 +3,12 @@ id: index-fixed-window-reactive
 title: Reactive Implementation
 sidebar_label: Reactive Implementation
 slug: /develop/java/spring/rate-limiting/fixed-window/reactive
+authors: [bsb]
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
-
-Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
-
 
 ## A basic Spring Web Flux App
 
