--- a/docs/develop/java/spring/rate-limiting/getting-started/getting-started.mdx
+++ b/docs/develop/java/spring/rate-limiting/getting-started/getting-started.mdx
@@ -3,15 +3,12 @@ id: index-rate-limiting
 title: How to implement Rate Limiting in Spring Applications using Redis
 sidebar_label: How to implement Rate Limiting in Spring Applications using Redis
 slug: /develop/java/spring/rate-limiting
+authors: [bsb]
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
-
-
-Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
-
 
 In this series of mini-tutorials we'll explore several approaches to implement rate limiting in Spring applications using Redis. We’ll start with the most basic of Redis recipes and we’ll slowly increase the complexity of our implementations.
 
