--- a/docs/develop/java/spring/redis-and-spring-course/index-redis-and-spring-course.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/index-redis-and-spring-course.mdx
@@ -3,14 +3,13 @@ id: index-redis-and-spring-course
 title: Getting Started with Spring Data Redis
 sidebar_label: Overview
 slug: /develop/java/redis-and-spring-course
+authors: [bsb]
 ---
 
 import RedisCard from '@site/src/theme/RedisCard';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
-
-Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
 
 This is a complete online course for Java/Spring developers wanting to learn how
 Redis can serve as your primary database in Spring Applications and how to leverage the
