--- a/docs/develop/java/spring/redis-and-spring-course/lesson_1/index-lesson_1.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_1/index-lesson_1.mdx
@@ -3,12 +3,10 @@ id: index-lesson_1
 title: "Spring and Redis: Up and Running"
 sidebar_label: Up and Running
 slug: /develop/java/redis-and-spring-course/lesson_1
+authors: [bsb]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
-
-Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
-
 
 ### Objectives
 
