--- a/docs/develop/java/spring/redis-and-spring-course/lesson_3/index-lesson_3.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_3/index-lesson_3.mdx
@@ -3,11 +3,10 @@ id: index-lesson_3
 title: "Object Mapping & Redis Repositories"
 sidebar_label: Mapping & Repositories
 slug: /develop/java/redis-and-spring-course/lesson_3
+authors: [bsb]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
-
-Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
 
 ### Objectives
 
