--- a/docs/develop/java/spring/redis-and-spring-course/lesson_4/index-lesson_4.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_4/index-lesson_4.mdx
@@ -3,11 +3,10 @@ id: index-lesson_4
 title: "User/Roles & Secondary Indexes"
 sidebar_label: User Roles & Secondary Indexes
 slug: /develop/java/redis-and-spring-course/lesson_4
+authors: [bsb]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
-
-Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
 
 ### Objectives
 To finish creating the user-role domain, load and transform JSON data, and begin crafting the Redi2Read API.
