--- a/docs/develop/java/spring/redis-and-spring-course/lesson_5/index-lesson_5.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_5/index-lesson_5.mdx
@@ -3,12 +3,10 @@ id: index-lesson_5
 title: "Books, Categories & The Catalog"
 sidebar_label: Books, Categories & The Catalog
 slug: /develop/java/redis-and-spring-course/lesson_5
+authors: [bsb]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
-
-Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
-
 
 ### Objectives
 Create the Book-Category-Book-Ratings domain, load and transform JSON data, and implement the Books API.
