--- a/docs/develop/java/spring/redis-and-spring-course/lesson_6/index-lesson_6.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_6/index-lesson_6.mdx
@@ -3,12 +3,10 @@ id: index-lesson_6
 title: "Domain Models with RedisJSON"
 sidebar_label: Domain Models w/ RedisJSON
 slug: /develop/java/redis-and-spring-course/lesson_6
+authors: [bsb]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
-
-
-Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
 
 ### Objectives
 Add a JSON-backed domain model to Redi2Read using the RedisJSON Redis module.
