--- a/docs/develop/java/spring/redis-and-spring-course/lesson_7/index-lesson_7.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_7/index-lesson_7.mdx
@@ -3,11 +3,10 @@ id: index-lesson_7
 title: "Search with RediSearch"
 sidebar_label: Search w/ RediSearch
 slug: /develop/java/redis-and-spring-course/lesson_7
+authors: [bsb]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
-
-Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
 
 ### Objectives
 
