--- a/docs/develop/java/spring/redis-and-spring-course/lesson_9/index-lesson_9.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_9/index-lesson_9.mdx
@@ -3,14 +3,13 @@ id: index-lesson_9
 title: "Caching REST Services with Redis"
 sidebar_label: Caching w/ Redis
 slug: /develop/java/redis-and-spring-course/lesson_9
+authors: [bsb]
 ---
 
 import RedisCard from '@site/src/theme/RedisCard';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
-
-Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
 
 ### Objectives
 
