--- a/docs/develop/java/spring/getting-started.mdx
+++ b/docs/develop/java/spring/getting-started.mdx
@@ -3,14 +3,12 @@ id: index-spring
 title: Spring
 sidebar_label: Overview
 slug: /develop/java/spring/
+authors: [bsb]
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
-
-Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
-
 
 #### Data-Driven Applications with Spring Boot and Redis
 
