--- a/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window-reactive-lua.mdx
+++ b/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window-reactive-lua.mdx
@@ -3,13 +3,12 @@ id: index-fixed-window-reactive-lua
 title: Atomicity with Lua
 sidebar_label: Atomicity with Lua
 slug: /develop/java/spring/rate-limiting/fixed-window/reactive-lua
+authors: [bsb]
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
-
-Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
 
 ## Improving atomicity and performance with Lua
 
