--- a/docs/create/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
+++ b/docs/create/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
@@ -3,6 +3,7 @@ id: index-getting-started-with-netlify
 title: Getting Started with Netlify and Redis
 sidebar_label: Getting Started with Netlify and Redis
 slug: /create/netlify/getting-started-with-netlify
+authors: [ajeet]
 ---
 
 import RedisCard from '@site/src/theme/RedisCard';
