--- a/docs/create/vercel/index-vercel.mdx
+++ b/docs/create/vercel/index-vercel.mdx
@@ -3,6 +3,7 @@ id: index-vercel
 title: Getting Started with Vercel and Redis
 sidebar_label: Getting Started with Vercel and Redis
 slug: /create/vercel
+authors: [ajeet]
 ---
 
 import RedisCard from '@site/src/theme/RedisCard';
