Added content for Deno

--- a/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
+++ b/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
@@ -3,6 +3,7 @@ id: index-deploy-docusaurus-to-netlify
 title: How to Deploy Docusaurus to Netlify in 5 Minutes
 sidebar_label: Deploy Docusaurus to Netlify in 5 Minutes
 slug: /create/netlify/deploy-docusaurus-to-netlify
+authors: [ajeet]
 ---
 
 import RedisCard from '@site/src/theme/RedisCard';
