--- a/docs/develop/C/index-c.mdx
+++ b/docs/develop/C/index-c.mdx
@@ -3,6 +3,7 @@ id: index-c
 title: C and Redis
 sidebar_label: C
 slug: /develop/C/
+authors: [ajeet]
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
