--- a/docs/develop/golang/index-golang.mdx
+++ b/docs/develop/golang/index-golang.mdx
@@ -3,6 +3,7 @@ id: index-golang
 title: Go and Redis
 sidebar_label: Go
 slug: /develop/golang/
+authors: [ajeet]
 ---
 
 import Tabs from '@theme/Tabs';
