--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -3,6 +3,7 @@ id: index-node
 title: NodeJS and Redis 
 sidebar_label: Overview
 slug: /develop/node
+authors: [ajeet]
 ---
 
 import RedisCard from '@site/src/theme/RedisCard';
