--- a/docs/develop/php/index-php.mdx
+++ b/docs/develop/php/index-php.mdx
@@ -3,6 +3,7 @@ id: index-php
 title: Php and Redis
 sidebar_label: Php 
 slug: /develop/php/
+authors: [ajeet]
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
