--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -3,6 +3,7 @@ id: index-python
 title: Python and Redis
 sidebar_label: Overview
 slug: /develop/python/
+authors: [ajeet]
 ---
 
 import Tabs from '@theme/Tabs';
