--- a/docs/howtos/nlp/index-nlp.mdx
+++ b/docs/howtos/nlp/index-nlp.mdx
@@ -4,6 +4,7 @@ title: Building a Pipeline for Natural Language Processing using RedisGears
 sidebar_label: Building a Pipeline for Natural Language Processing using RedisGears
 slug: /howtos/nlp
 marp: true
+authors: [alex,ajeet]
 ---
 
 import Tabs from '@theme/Tabs';
@@ -12,7 +13,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
 
-Authors - [Alex Mikhalev](https://www.linkedin.com/in/alexmikhalev/), [Ajeet Singh Raina](https://www.linkedin.com/in/ajeetsraina/)
 
 ##  Goal
 
@@ -98,7 +98,7 @@ You can deploy PyTorch and spacy to run on RedisGears.
   ```
 
 
-:::important
+:::tip
 
 For Data science-focused deployment, RedisCluster should be in HA mode with at least one slave for each master. 
 One need to change a few default parameters for rgcluster to accommodate the size of PyTorch and spacy libraries (each over 1GB zipped), gist with settings.
