Removed Logos and add tutorials

--- a/docs/create/docker/nodejs-nginx-redis/index-nodejs-nginx-redis.mdx
+++ b/docs/create/docker/nodejs-nginx-redis/index-nodejs-nginx-redis.mdx
@@ -8,6 +8,7 @@ authors: [ajeet]
 
 Thanks to [Node.js](https://nodejs.dev/) - Millions of frontend developers that write JavaScript for the browser are now able to write the server-side code in addition to the client-side code without the need to learn a completely different language. Node.js is a free, open-sourced, cross-platform JavaScript run-time environment. It is capable to handle thousands of concurrent connections with a single server without introducing the burden of managing thread concurrency, which could be a significant source of bugs.
 
+![Nginx-node](docker_nginx.png)
 
 In this quickstart guide, you will see how to build a Node.js application (visitor counter) using Nginx, Redis and Docker.
 
