--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -9,7 +9,7 @@ authors: [ajeet]
 
 ![alt_text](images/preview_azurefunction.png "image_tooltip")
 
-[Azure Functions](https://azure.microsoft.com/en-in/services/functions/) is an event-based, serverless compute platform offered by [Microsoft ](https://azure.microsoft.com/en-in/blog/microsoft-named-a-leader-in-forrester-wave-functionasaservice-platforms/)to accelerate and simplify serverless application development. It allows developers to write less code, build and debug locally without additional setup, and deploy and operate at scale in the cloud. 
+[Azure Functions](https://azure.microsoft.com/en-in/services/functions/) is an event-based, serverless compute platform offered by [Microsoft (https://azure.microsoft.com/en-in/blog/microsoft-named-a-leader-in-forrester-wave-functionasaservice-platforms/) to accelerate and simplify serverless application development. It allows developers to write less code, build and debug locally without additional setup, and deploy and operate at scale in the cloud. 
 
 ### How it works
 
