--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -13,7 +13,7 @@ authors: [ajeet]
 
 ### How it works
 
-[Azure Functions](https://github.com/Azure/Azure-Functions) allows you to implement your system's logic into readily available blocks of code. These code blocks are called "functions." [Azure functions' execution is triggered](https://docs.microsoft.com/en-us/learn/modules/execute-azure-function-with-triggers/) when an event is fired. Whenever demand for execution increases, more and more resources are allocated automatically to the service, and when requests fall, all extra resources and application instances drop off automatically. In short, as a developer, you can now focus on the pieces of code that matter most to you, and Azure Functions handles the rest.
+[Azure Functions](https://github.com/Azure/Azure-Functions) allows you to implement your system's logic into readily available blocks of code. These code blocks are called "functions." [An Azure function's execution is triggered](https://docs.microsoft.com/en-us/learn/modules/execute-azure-function-with-triggers/) when an event is fired. Whenever demand for execution increases, more and more resources are allocated automatically to the service, and when requests fall, all extra resources and application instances drop off automatically. In short, as a developer, you can now focus on the pieces of code that matter most to you, and Azure Functions handles the rest.
 
 Azure Functions [provides as many or as few compute resources as needed](https://docs.microsoft.com/en-us/azure/azure-functions/functions-scale) to meet your application's demand. Providing compute resources on-demand is the essence of [serverless computing](https://azure.microsoft.com/solutions/serverless/) in Azure Functions.
 
