--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -51,7 +51,7 @@ In this tutorial, you will learn how to get started with Azure Functions and Red
 
 ### Step 1. Log in to Microsoft Azure Portal
 
-Create an Azure account with an active subscription by clicking this link: [Create an account for free](https://azure.microsoft.com/free/?ref=microsoft.com&utm_source=microsoft.com&utm_medium=docs&utm_campaign=visualstudio).
+Create an Azure account with an active subscription by clicking this link: [Create an account for free](https://azure.microsoft.com/free/).
 
 
 
