--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -27,7 +27,7 @@ Azure Functions [provides as many or as few compute resources as needed](https:/
 - It allows you to use Functions extensions on Visual Studio and Visual Studio Code for faster and more efficient development on your local system.
 - With Azure Functions you can set up CI/CD with Azure Pipelines.
 - It’s a great solution for processing bulk data, integrating systems, working with IoT, and building simple APIs and microservices.
-- It’s used to break the monolithic architecture into loosely coupled functions.
+- It’s used to break monolithic architectures into loosely coupled functions.
 - It allows you to [deploy Functions to Kubernetes](https://docs.microsoft.com/en-us/azure/azure-functions/functions-kubernetes-keda). 
 
 In this tutorial, you will learn how to get started with Azure Functions and Redis. 
