--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -56,7 +56,7 @@ Create an Azure account with an active subscription by clicking this link: [Crea
 
 
 
-![alt_text](images/image2.png "image_tooltip")
+![Acount Dashboard](images/image2.png "image_tooltip")
 
 
 ### Step 2.  Set up “Azure Cache for Redis”
