--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -278,7 +278,7 @@ For detailed output, run func with --verbose flag.
 
 
 
-![alt_text](images/image17.png "image_tooltip")
+![Output in the browser from running the application locally](images/image17.png "image_tooltip")
 
 
 ### Step 13. Seed the Redis database
