--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -283,7 +283,7 @@ For detailed output, run func with --verbose flag.
 
 ### Step 13. Seed the Redis database
 
-Now, let us seed BabyNames data into the redis database.
+Now, let us seed BabyNames data into the Redis database.
 
 
 ```
