--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -291,7 +291,7 @@ git clone https://github.com/slorello89/Seed-Baby-Names
 ```
 
 
-If you connect to Redis cache database and run monitor command, you should see the data being inserted into the database as shown below:
+If you connect to the Redis database and run the `MONITOR` command, you should see the data being inserted into the database as shown below:
 
 
 ```
