--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -330,7 +330,7 @@ If you connect to the Redis database and run the `MONITOR` command, you should s
 
 
 
-![alt_text](images/image18.png "image_tooltip")
+![Redis Insight](images/image18.png "image_tooltip")
 
 
 
