--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -45,7 +45,7 @@ In this tutorial, you will learn how to get started with Azure Functions and Red
 - Step 9. Connect Azure Function to Azure account
 - Step 10. Clone the project repository
 - Step 11. Trigger the function
-- Step 12. Verify the Azure Function app is working properly
+- Step 12. Verify the Azure Functions app is working properly
 - Step 13. Seed the Redis database
 - Step 14. Run query using RedisInsight
 
