--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -65,7 +65,7 @@ Type "Azure Cache for Redis" in the search section and select the service:
 
 
 
-![alt_text](images/image3.png "image_tooltip")
+![Azure Cache for Redis Service](images/image3.png "image_tooltip")
 
 Under "New Redis Cache" window, create a new resource group, select your preferred location and cache type:
 
