--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -70,7 +70,7 @@ Type "Azure Cache for Redis" in the search section and select the service:
 Under "New Redis Cache" window, create a new resource group, select your preferred location and cache type:
 
 
-![alt_text](images/image4.png "image_tooltip")
+![Creating a new Redis Instance](images/image4.png "image_tooltip")
 
 Once you are done with the entries, click "Review + Create" button.
 
