--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -80,7 +80,7 @@ Once you are done with the entries, click "Review + Create" button.
 
 Wait for few seconds to let deployment process to complete.
 
-![alt_text](images/image6.png "image_tooltip")
+![Deploying your Redis Instance](images/image6.png "image_tooltip")
 
 
 Once the deployment gets completed, you will be provided with the deployment name, subscription details and resource group.
