--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -83,7 +83,7 @@ Wait for few seconds to let deployment process to complete.
 ![Deploying your Redis Instance](images/image6.png "image_tooltip")
 
 
-Once the deployment gets completed, you will be provided with the deployment name, subscription details and resource group.
+Once the deployment is complete, you will be provided with the deployment name, subscription details and resource group.
 
 
 ![alt_text](images/image7.png "image_tooltip")
