--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -86,7 +86,7 @@ Wait for few seconds to let deployment process to complete.
 Once the deployment is complete, you will be provided with the deployment name, subscription details and resource group.
 
 
-![alt_text](images/image7.png "image_tooltip")
+![Redis Instance up and running](images/image7.png "image_tooltip")
 
 
 ### Step 3. Configure Keys for Redis Cache
