--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -97,7 +97,7 @@ Click "Overview" option in the left sidebar to see the Primary key and save it f
 
 
 
-![alt_text](images/keys.png "image_tooltip")
+![Managing keys](images/keys.png "image_tooltip")
 
 
 ### Step 4. Verify if Redis database is accessible
