--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -117,6 +117,7 @@ demorediss.redis.cache.windows.net:6379> get a1
 
 ### Step 5. Install Homebrew on Mac
 
+Install the Homebrew package manager by running this script:
 
 ```
 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
