--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -130,7 +130,7 @@ Visual Studio Code is a lightweight but powerful source code editor that runs on
 
 
 
-![alt_text](images/image8.png "image_tooltip")
+![Visual Studio Code download](images/image8.png "image_tooltip")
 
 
 Install Visual Code Studio in your Mac system
