--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -133,7 +133,7 @@ Visual Studio Code is a lightweight but powerful source code editor that runs on
 ![Visual Studio Code download](images/image8.png "image_tooltip")
 
 
-Install Visual Code Studio in your Mac system
+Install Visual Code Studio on your Mac system
 
 
 
