--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -137,7 +137,7 @@ Install Visual Code Studio on your Mac system
 
 
 
-![alt_text](images/image9.png "image_tooltip")
+![The Azure Functions extension for Visual Studio code](images/image9.png "image_tooltip")
 
 
 ### Step 7. Install the Azure Functions Core Tools
