--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -157,7 +157,7 @@ Use the Azure Functions extension to quickly create, debug, manage, and deploy s
 
 
 
-![alt_text](images/image10.png "image_tooltip")
+![The Azure Functions extension for Visual Studio Code](images/image10.png "image_tooltip")
 
 
 
