--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -168,7 +168,7 @@ Use the Azure Functions extension to quickly create, debug, manage, and deploy s
 
 
 
-![alt_text](images/image13.png "image_tooltip")
+![Configuring Azure in Visual Studio Code](images/image13.png "image_tooltip")
 
 
 ### Step 10. Clone the project repository
