--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -173,7 +173,7 @@ Use the Azure Functions extension to quickly create, debug, manage, and deploy s
 
 ### Step 10. Clone the project repository
 
-For this tutorial, we will be using BabyNames counter app built using C#. 
+For this tutorial, we will be using a baby names counter app built using C#. 
 To get started, we will first clone the repository:
 
 ```
