--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -183,7 +183,7 @@ git clone https://github.com/redis-developer/Baby-Names-Func
 ```
 
 
-Add “Azure Cache for Redis” endpoint URL details under local-settings.json file as shown below:
+Add “Azure Cache for Redis” endpoint URL details in the `local-settings.json` file as shown below:
 
 
 ```
