--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -199,7 +199,7 @@ Add “Azure Cache for Redis” endpoint URL details in the `local-settings.json
 ```
 
 
-Open the Visual Studio Code by running the following command:
+Open the project with Visual Studio Code by running the following command:
 
 
 ```
