--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -213,7 +213,7 @@ This will open VS Code. The function will automatically load into the plugin.
 
 
 
-![alt_text](images/image14.png "image_tooltip")
+![Project loaded into Visual Studio Code](images/image14.png "image_tooltip")
 
 
 ### Step 11. Trigger the function
