--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -223,7 +223,7 @@ Press F5 to automatically execute the function.
 
 
 
-![alt_text](images/image15.png "image_tooltip")
+![Executing the function](images/image15.png "image_tooltip")
 
 
 If you want to manually select the repository, choose .NET framework, etc., and then click “Create new project.”
