--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -231,7 +231,7 @@ If you want to manually select the repository, choose .NET framework, etc., and 
 
 
 
-![alt_text](images/image16.png "image_tooltip")
+![Creating a new project](images/image16.png "image_tooltip")
 
 
 You will find the following output under VS Code screen:
