--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -274,7 +274,7 @@ For detailed output, run func with --verbose flag.
 ```
 
 
-### Step 12. Verify the Azure function app is working properly
+### Step 12. Verify the Azure functions app is working properly
 
 
 
