--- a/docs/create/docker/nodejs-nginx-redis/index-nodejs-nginx-redis.mdx
+++ b/docs/create/docker/nodejs-nginx-redis/index-nodejs-nginx-redis.mdx
@@ -106,9 +106,18 @@ Redis runs on port 6379 by default. Make sure you don't run another instance of 
 #### File: nginx/nginx.conf
 
 ```
-FROM nginx
-RUN rm /etc/nginx/conf.d/default.conf
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+upstream loadbalancer {
+  server web1:5000;
+  server web2:5000;
+}
+
+server {
+  listen 80;
+  server_name localhost;
+  location / {
+    proxy_pass http://loadbalancer;
+  }
+}
 ```
 
 #### File: Dockerfile
