Added tutorial for RedisInsight on Windows

--- a/docs/explore/redisinsightv2/index-redisinsightv2.mdx
+++ b/docs/explore/redisinsightv2/index-redisinsightv2.mdx
@@ -25,6 +25,15 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
         />
   </div>
 
+   <div class="col">
+     <RedisCard
+        title="How to run RedisInsight on Windows"
+        description="Getting started with RedisInsight on Windows Platform"
+        page="/explore/redisinsightv2/windows"
+        />
+  </div>
+
+
  <div class="col">
      <RedisCard
         title="RedisInsight Browser Visualization Tutorial"
@@ -34,6 +43,10 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
         page="/explore/redisinsightv2/browser"
         />
  </div>
+</div>
+ 
+<div class="row">
+
 
  <div class="col">
      <RedisCard
@@ -42,8 +55,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
         page="/explore/redisinsightv2/profiler"
         />
  </div>
-</div>
-<div class="row">
+
 
   <div class="col">
      <RedisCard
